@@ -1650,8 +1650,19 @@ for options to pass to the DOCNAME interpreter. \"
 (defvar python-imports)			; forward declaration
 (make-variable-buffer-local 'python-imports)
 
-(defvar py-execute-directory nil
-  "Stores the file's directory-name py-execute-... functions act upon. ")
+(defcustom py-execute-directory nil
+  "When set, stores the file's default directory-name py-execute-... functions act upon.
+
+Used by Python-shell for output of `py-execute-buffer' and related commands. See also `py-use-current-dir-when-execute-p'"
+  :type 'string
+  :group 'python-mode)
+
+(defcustom py-use-current-dir-when-execute-p nil
+  "When `t', current directory is used by Python-shell for output of `py-execute-buffer' and related commands.
+
+See also `py-execute-directory'"
+  :type 'boolean
+  :group 'python-mode)
 
 (defvar py-prev-dir/file nil
   "Caches (directory . file) pair used in the last `py-load-file' command.
@@ -9822,7 +9833,12 @@ When called from a programm, it accepts a string specifying a shell which will b
   "Adapt the variables used in the process. "
   (let* ((oldbuf (current-buffer))
          (pyshellname (or pyshellname (py-choose-shell)))
-         (py-execute-directory (or (ignore-errors (file-name-directory (file-remote-p (buffer-file-name) 'localname)))(getenv "WORKON_HOME")(getenv "HOME")))
+         (execute-directory (cond ((ignore-errors (file-name-directory (file-remote-p (buffer-file-name) 'localname))))
+                                  (py-use-current-dir-when-execute-p
+                                   (file-name-directory (buffer-file-name)))
+                                  ((getenv "WORKON_HOME"))
+                                  (py-execute-directory)
+                                  ((getenv "HOME"))))
          (strg (buffer-substring-no-properties start end))
          (sepchar (or sepchar (char-to-string py-separator-char)))
          (py-buffer-name (py-buffer-name-prepare pyshellname sepchar))
@@ -9849,7 +9865,7 @@ When called from a programm, it accepts a string specifying a shell which will b
     (py-fix-start (point-min)(point-max))
     (py-if-needed-insert-shell (prin1-to-string proc) sepchar)
     (unless wholebuf (py-insert-coding))
-    (unless (string-match "[jJ]ython" pyshellname) (py-insert-execute-directory))
+    (unless (string-match "[jJ]ython" pyshellname) (py-insert-execute-directory execute-directory))
     (cond (python-mode-v5-behavior-p
 
            (let ((cmd (concat pyshellname (if (string-equal py-which-bufname
@@ -9947,7 +9963,7 @@ See also `py-execute-region'. "
            (py-insert-execute-directory orig done))
           (t (forward-line 1)
              (unless (empty-line-p) (newline))
-             (insert (concat "import os; os.chdir(\"" py-execute-directory "\")\n"))))))
+             (insert (concat "import os; os.chdir(\"" execute-directory "\")\n"))))))
 
 (defun py-insert-coding ()
   ;; (switch-to-buffer (current-buffer))
